# iwtsigtools

./: .gitignore  .pylintrc  CHANGELOG  LICENSE  README.md  iwtsigtools.ini  pyproject.toml  setup.cfg  setup.py
example/: chop_measurement_on_silence.py  testbed.ipynb
iwtsigtools/: __init__.py  filehandling.py  idle.py  logging.py  normalization.py  processdataframe.py
iwtsigtools_Test/: test_iwtsigtools.py
