[metadata]
name = iwtsigtools
version = 0.1.0
author = L. Schoenemann
author_email = schoenemann@iwt.uni-bremen.de
description = Tools for handling measurement signals
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
license_files = file: LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    pandas
    nptdms
