[metadata]
name = iwtsigtools
author = L. Schoenemann
author_email = schoenemann@iwt.uni-bremen.de
description = Tools for handling measurement signals
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = file: LICENSE

[options]
use_scm_version = True
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    pandas
    nptdms
